# HarmonyWireguard

./: .gitignore  AGENTS.md  CHANGELOG.md  FEATURE.md  LICENSE  NAVIGATION_REFACTOR_HANDOFF.md  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TODO.md  UI_DESIGN.md  build-profile.json5  code-linter.json5  oh-package.json5
.claude/rules/: harmonyos.md
.github/workflows/: publish-release.yml
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/tunnel/: packet_io.cpp  packet_io.h  tun_interface.cpp  tun_interface.h  udp_socket.cpp  udp_socket.h
entry/src/main/cpp/types/libentry/: Index.d.ts  oh-package.json5
entry/src/main/cpp/utils/: base64.cpp  base64.h  logger.cpp  logger.h
entry/src/main/cpp/wireguard/: lwip_compat.h  wireguard-platform.h  wireguard.h  wireguard_platform_harmony.cpp  wireguardif.c  wireguardif.h  wireguardif_harmony.cpp  wireguardif_harmony.h
entry/src/main/ets/: entry.d.ts
entry/src/main/ets/common/: Constants.ets  DesignSystem.ets  DialogHelper.ets  Formatters.ets  Utils.ets  Validators.ets  VpnConfigBuilder.ets  VpnRoutePlan.ets  WgStatusCodec.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: WgConfig.ts
entry/src/main/ets/pages/: AboutPage.ets  ConfigEditPage.ets  ConfigPreviewPage.ets  ImportConfigPage.ets  Index.ets  PasteConfigPage.ets  SettingsPage.ets  StatusPage.ets  TunnelDetailPage.ets
(+51 files in other folders)
